logica.js/Correciones: se hacen correciones a la velocidad de la pelota  y se aguregan las instrucciones del juego para esperiencia de usuario

--- a/index.html
+++ b/index.html
@@ -9,10 +9,32 @@
   </head>
   <body>
     <header><h1>PING PONG</h1></header>
+    <h2>BIENVENIDOS AL VIRTUAL PING PONG GAME</h2>
 
     <section class="meza">
       <canvas id="canvas"></canvas>
     </section>
+    <div class="instrucciones">
+      <h1 class="instrucciones--titulo">INSTRUCIONES DEL JUEGO</h1>
+      <h3 class="instrucciones--subtitulo">
+        POR FAVOR, SIGUE LOS SIGUIENTES PASOS
+      </h3>
+      <ul class="instrucciones--listaInstrucciones">
+        <li>Para iniciar o pausar el juego oprime <b>0</b></li>
+        <li>
+          Para mover la barra <b>IZQUIERDA</b> hacia arriba oprime el <b>7</b>,
+          y el <b>1</b> para moverla hacia abajo
+        </li>
+        <li>
+          Para mover la barra <b>DERECHA</b> hacia arriba oprime el <b>9</b>, y
+          el <b>3</b> para moverla hacia abajo
+        </li>
+        <li>
+          Una vez se salga la <b>BOLA</b> de la meza presiona <b>F5</b> para
+          uniciar un nuevo juego
+        </li>
+      </ul>
+    </div>
 
     <script src="logica.js"></script>
   </body>
