--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
       rel="shortcut icon"
       href="assets/icons/2138353_ping pong_sport_table_table tennis_tennis_icon.png"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header><h1>PING PONG</h1></header>
+    <header><h1  class="title--header">PING PONG</h1></header>
     <h2>BIENVENIDOS AL VIRTUAL PING PONG GAME</h2>
 
     <section class="meza">
